# OOTD

./: .gitignore  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: ci.yml
bindings/java/: build.gradle.kts  settings.gradle.kts
bindings/java/src/main/java/io/ootd/: Ootd.java  OotdLocale.java
bindings/java/src/test/java/io/ootd/: OotdParityTest.java  OotdTest.java  ParityFixture.java
bindings/kotlin/: build.gradle.kts  settings.gradle.kts
bindings/kotlin/src/main/kotlin/io/ootd/kotlin/: OotdKotlin.kt
bindings/kotlin/src/test/kotlin/io/ootd/kotlin/: OotdKotlinParityTest.kt  OotdKotlinTest.kt
bindings/node/: api.d.ts  api.js  index.d.ts  index.js  package-lock.json  package.json
bindings/node/rust/: Cargo.toml
bindings/node/rust/src/: lib.rs
bindings/node/test/: object-inputs.test.mjs  parity.test.mjs
bindings/python/: pyproject.toml
bindings/python/ootd/: __init__.py  __init__.pyi
bindings/python/rust/: Cargo.toml  build.rs
bindings/python/rust/src/: lib.rs
bindings/python/tests/: test_from_duration_inputs.py  test_monkeypatch.py  test_parity.py  test_stub_generation.py
bindings/swift/: Package.swift
bindings/swift/Sources/OOTD/: OOTD.swift
bindings/swift/Sources/OOTDParity/: main.swift
bindings/wasm/: package-lock.json  package.json
bindings/wasm/rust/: Cargo.toml
bindings/wasm/rust/src/: lib.rs
bindings/wasm/scripts/: patch-types.mjs
bindings/wasm/test/: parity.test.mjs
crates/ootd-core/: Cargo.toml
crates/ootd-core/src/: api.rs  daypart.rs  duration_policy.rs  lib.rs  render.rs  tests.rs  types.rs
crates/ootd-core/src/locale/: en.rs  ko.rs  mod.rs
crates/ootd-core/tests/: golden.rs
crates/ootd-ffi-c/: Cargo.toml
crates/ootd-ffi-c/src/: lib.rs
include/: ootd.h
scripts/: gen-c-header.sh  gen-java-bindings.sh
tests/: between_rfc3339_cases.json  parity_cases.json
