[workspace]
members = [
  "crates/ootd-core",
  "crates/ootd-ffi-c",
  "bindings/python/rust",
  "bindings/node/rust",
  "bindings/wasm/rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
authors = ["Woorak Park"]
repository = "https://github.com/grf53/OOTD"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
