[package]
name = "ootd-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
ootd-core = { path = "../../../crates/ootd-core" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
